--- a/Webb/css/style.css
+++ b/Webb/css/style.css
@@ -94,3 +94,15 @@ body{
 .login-help{
   font-size: 12px;
 }
+
+footer {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  background-color: #333333;
+  color: #9d9d9d;
+  text-align: center;
+}
+
