--- a/Webb/css/style.css
+++ b/Webb/css/style.css
@@ -19,6 +19,10 @@ body{
   font-family: roboto;
 }
 
+.modal-backdrop{
+  display: none;
+}
+
 .loginmodal-container input[type=submit] {
   width: 100%;
   display: block;
@@ -106,3 +110,7 @@ footer {
   text-align: center;
 }
 
+a:hover
+{
+  cursor: pointer;
+}
