--- a/Android/Scrummerz/app/src/main/res/layout/activity_signed_in_start.xml
+++ b/Android/Scrummerz/app/src/main/res/layout/activity_signed_in_start.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bglogin"
     tools:context="se.newton.scrummerz.signedInStart">
 
     <TextView
@@ -18,5 +19,65 @@
         tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1" />
+        tools:layout_constraintTop_creator="1"
+        app:layout_constraintHorizontal_bias="0.049"
+        app:layout_constraintVertical_bias="0.029" />
+
+    <TextView
+        android:id="@+id/myGradesTextView"
+        android:layout_width="154dp"
+        android:layout_height="30dp"
+        android:layout_marginLeft="-8dp"
+        android:layout_marginTop="17dp"
+        android:text="Mina betyg"
+        android:textColor="@color/common_google_signin_btn_text_dark_default"
+        android:textSize="24sp"
+        app:layout_constraintLeft_toLeftOf="@+id/myCoursesTextView"
+        app:layout_constraintTop_toBottomOf="@+id/myCoursesTextView" />
+
+    <TextView
+        android:id="@+id/feedbackTextView"
+        android:layout_width="154dp"
+        android:layout_height="30dp"
+        android:text="Ge feedback"
+        android:textColor="@color/common_google_signin_btn_text_dark_default"
+        android:textSize="24sp"
+        android:layout_marginLeft="0dp"
+        app:layout_constraintLeft_toLeftOf="@+id/textView4"
+        tools:layout_editor_absoluteY="208dp" />
+
+    <TextView
+        android:id="@+id/myCoursesTextView"
+        android:layout_width="154dp"
+        android:layout_height="31dp"
+        android:text="Mina kurser"
+        android:textColor="@color/common_google_signin_btn_text_dark_default"
+        android:textSize="24sp"
+        android:layout_marginTop="9dp"
+        app:layout_constraintTop_toBottomOf="@+id/feedbackTextView"
+        android:layout_marginLeft="-8dp"
+        app:layout_constraintLeft_toLeftOf="@+id/feedbackTextView" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="61dp"
+        android:text="Välkommen"
+        android:textColor="@color/common_google_signin_btn_text_dark_default"
+        android:textSize="35sp"
+        app:layout_constraintLeft_toLeftOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="103dp"
+        android:layout_height="42dp"
+        android:text="Namn"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="@+id/textView4"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+
 </android.support.constraint.ConstraintLayout>
