--- a/Android/Scrummerz/app/src/main/res/layout/activity_signed_in_start.xml
+++ b/Android/Scrummerz/app/src/main/res/layout/activity_signed_in_start.xml
@@ -44,7 +44,8 @@
         android:textSize="24sp"
         android:layout_marginLeft="0dp"
         app:layout_constraintLeft_toLeftOf="@+id/textView4"
-        tools:layout_editor_absoluteY="208dp" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/nameTextView" />
 
     <TextView
         android:id="@+id/myCoursesTextView"
@@ -71,11 +72,11 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
-        android:id="@+id/textView5"
-        android:layout_width="103dp"
-        android:layout_height="42dp"
-        android:text="Namn"
+        android:id="@+id/nameTextView"
+        android:layout_width="332dp"
+        android:layout_height="58dp"
         android:layout_marginLeft="8dp"
+        android:text="Namn"
         app:layout_constraintLeft_toLeftOf="@+id/textView4"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
