--- a/Android/Scrummerz/app/src/main/res/layout/course_card.xml
+++ b/Android/Scrummerz/app/src/main/res/layout/course_card.xml
@@ -20,4 +20,12 @@
         card_view:layout_constraintRight_toRightOf="parent"
         card_view:srcCompat="@drawable/line" />
 
+    <TextView
+        android:id="@+id/testView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        tools:layout_editor_absoluteX="162dp"
+        tools:layout_editor_absoluteY="45dp" />
+
 </android.support.constraint.ConstraintLayout>
