--- a/Webb/css/style.css
+++ b/Webb/css/style.css
@@ -121,3 +121,21 @@ a:hover
   display: inline;
   width: auto;
 }
+
+.animate-hide {
+ -webkit-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+    -moz-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+    -o-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+    transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+  line-height:20px;
+  opacity:1;
+  padding:10px;
+  width: 40%;
+  background:#4542f4;
+}
+
+.animate-hide.ng-hide {
+  line-height:0;
+  opacity:0;
+  padding:0 10px;
+}
