--- a/Webb/css/style.css
+++ b/Webb/css/style.css
@@ -41,7 +41,6 @@ body{
   background: #fff;
   border: 1px solid #d9d9d9;
   border-top: 1px solid #c0c0c0;
-  /* border-radius: 2px; */
   padding: 0 8px;
   box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -62,13 +61,9 @@ body{
   font-weight: 700;
   height: 36px;
   padding: 0 8px;
-/* border-radius: 3px; */
-/* -webkit-user-select: none;
-  user-select: none; */
 }
 
 .loginmodal-submit {
-  /* border: 1px solid #3079ed; */
   border: 0px;
   color: #fff;
   text-shadow: 0 1px rgba(0,0,0,0.1); 
@@ -76,15 +71,12 @@ body{
   padding: 17px 0px;
   font-family: roboto;
   font-size: 14px;
-  /* background-image: -webkit-gradient(linear, 0 0, 0 100%,   from(#4d90fe), to(#4787ed)); */
 }
 
 .loginmodal-submit:hover {
-  /* border: 1px solid #2f5bb7; */
   border: 0px;
   text-shadow: 0 1px rgba(0,0,0,0.3);
   background-color: #357ae8;
-  /* background-image: -webkit-gradient(linear, 0 0, 0 100%,   from(#4d90fe), to(#357ae8)); */
 }
 
 .loginmodal-container a {
@@ -130,12 +122,22 @@ a:hover
   line-height:20px;
   opacity:1;
   padding:10px;
-  width: 40%;
-  background:#4542f4;
 }
 
 .animate-hide.ng-hide {
   line-height:0;
   opacity:0;
   padding:0 10px;
+}
+
+.well{
+  background-color: #e5e5e5 !important;
+}
+
+.row{
+  margin: 10px 10px 10px 10px !important;
+}
+
+.panel-heading:hover{
+  cursor: pointer;
 }
