--- a/Android/Scrummerz/app/src/main/res/layout/item_courses.xml
+++ b/Android/Scrummerz/app/src/main/res/layout/item_courses.xml
@@ -4,20 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
+    android:layout_marginTop="2dp"
     app:cardElevation="3dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:elevation="0dp"
-        android:paddingBottom="10dp">
+        android:layout_margin="3dp"
+        android:elevation="0dp">
 
         <include
             layout="@layout/item_courses_content"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp" />
+            android:layout_height="wrap_content" />
 
     </RelativeLayout>
 
