--- a/Android/Scrummerz/app/src/main/res/layout/activity_course_info.xml
+++ b/Android/Scrummerz/app/src/main/res/layout/activity_course_info.xml
@@ -9,29 +9,32 @@
 
     <TextView
         android:id="@+id/courseName"
-        android:layout_width="360dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:text="Kursnamn"
-        android:textSize="30sp"
+        android:textColor="@android:color/background_light"
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintLeft_toLeftOf="@+id/imageView2"
+        app:layout_constraintRight_toRightOf="@+id/imageView2"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <TextView
         android:id="@+id/detailsView"
-        android:layout_width="333dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="0dp"
         android:layout_marginRight="0dp"
         android:layout_marginTop="12dp"
         android:text="Spicy jalapeno bacon ipsum dolor amet rump kielbasa pancetta tongue picanha. Cupim pork belly prosciutto jerky sirloin kielbasa brisket beef chuck corned beef jowl tenderloin drumstick ball tip. Andouille ham hock chicken hamburger. Cupim short ribs pig, rump burgdoggen bresaola swine. Venison ham burgdoggen kielbasa drumstick porchetta strip steak chicken boudin bresaola flank picanha turkey. Pancetta turkey ham corned beef bacon. Spare ribs cow beef ribs pork belly andouille bresaola kielbasa shoulder burgdoggen tenderloin pork chop rump."
-        app:layout_constraintHorizontal_bias="0.418"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:textColor="@android:color/background_light"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="@+id/courseName"
+        app:layout_constraintRight_toRightOf="@+id/courseName"
         app:layout_constraintTop_toBottomOf="@+id/courseName" />
 
     <TextView
@@ -39,8 +42,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="0dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="6dp"
         android:text="Teacher: "
+        android:textColor="@android:color/background_light"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="@+id/detailsView"
         app:layout_constraintTop_toBottomOf="@+id/detailsView" />
@@ -49,22 +53,23 @@
         android:id="@+id/statusBoldView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="0dp"
         android:layout_marginTop="8dp"
         android:text="Status:"
+        android:textColor="@android:color/background_light"
         android:textStyle="bold"
-        app:layout_constraintLeft_toLeftOf="@+id/teacherboldView"
-        app:layout_constraintTop_toBottomOf="@+id/teacherboldView" />
+        app:layout_constraintTop_toBottomOf="@+id/teacherboldView"
+        android:layout_marginLeft="0dp"
+        app:layout_constraintLeft_toLeftOf="@+id/detailsView" />
 
     <TextView
         android:id="@+id/teacherView"
         android:layout_width="272dp"
         android:layout_height="19dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
+        android:textColor="@android:color/background_light"
         app:layout_constraintBaseline_toBaselineOf="@+id/teacherboldView"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toRightOf="@+id/teacherboldView"
+        android:layout_marginRight="0dp"
         app:layout_constraintRight_toRightOf="@+id/detailsView" />
 
     <TextView
@@ -72,9 +77,25 @@
         android:layout_width="272dp"
         android:layout_height="19dp"
         android:layout_marginLeft="0dp"
-        android:layout_marginRight="8dp"
+        android:textColor="@android:color/background_light"
         app:layout_constraintBaseline_toBaselineOf="@+id/statusBoldView"
-        app:layout_constraintLeft_toLeftOf="@+id/teacherView"
-        app:layout_constraintRight_toRightOf="@+id/detailsView" />
+        android:layout_marginRight="0dp"
+        app:layout_constraintRight_toRightOf="@+id/detailsView"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="@+id/teacherView" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="0dp"
+        android:layout_height="170dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="0dp"
+        android:scaleType="centerCrop"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/book" />
 
 </android.support.constraint.ConstraintLayout>
