--- a/Android/Scrummerz/app/src/main/res/layout/item_courses_content.xml
+++ b/Android/Scrummerz/app/src/main/res/layout/item_courses_content.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <ImageView
-        android:id="@+id/open_box"
+        android:id="@+id/course_status"
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:layout_marginStart="8dp"
@@ -14,7 +14,11 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="@+id/Item_title_courseTitle"
         tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintTop_creator="1" />
+        tools:layout_constraintTop_creator="1"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/Item_category"
+        android:layout_marginBottom="8dp" />
 
 
     <TextView
@@ -25,12 +29,13 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="0dp"
         android:textStyle="bold"
-        app:layout_constraintLeft_toRightOf="@+id/open_box"
+        app:layout_constraintLeft_toRightOf="@+id/course_status"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="Course title" />
+        tools:text="Course title"
+        app:layout_constraintHorizontal_bias="0.0" />
 
     <TextView
         android:id="@+id/Item_category"
