--- a/Webb/css/style.css
+++ b/Webb/css/style.css
@@ -1,8 +1,18 @@
 body{
     background-image: url('../images/webb-bg.svg');
     background-size: cover;
-
 }
+
+#startbody {
+    background-image: url('../images/students.jpeg');
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+#start-main {
+    background: rgba(0, 0, 0, 0.35);
+}
+
 .loginmodal-container {
   padding: 30px;
   max-width: 350px;
@@ -12,7 +22,11 @@ body{
   border-radius: 2px;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
   overflow: hidden;
-  font-family: roboto;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+#modal-dialog-h1 {
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .loginmodal-container h1 {
@@ -140,4 +154,8 @@ a:hover
 
 .panel-heading:hover{
   cursor: pointer;
+}
+
+.row {
+  color: white;
 }
