--- a/Webb/css/style.css
+++ b/Webb/css/style.css
@@ -1,6 +1,7 @@
 body{
     background-image: url('../images/webb-bg.svg');
     background-size: cover;
+    background-attachment: fixed;
 }
 
 #startbody {
@@ -61,11 +62,22 @@ body{
 }
 
 .loginmodal-container input[type=text]:hover, input[type=password]:hover {
-  border: 1px solid #b9b9b9;
-  border-top: 1px solid #a0a0a0;
+  border: 1px solid #b9b9bF;
+  border-top: 1px solid #aFaFaF;
   -moz-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
   -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
   box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+}
+
+.navigation {
+  color: white;
+  text-align: left;
+  
+  /* Navigation DIV on logged in screen */
+}
+
+.navigation img {
+  max-width: 200px;
 }
 
 .loginmodal {
@@ -145,7 +157,7 @@ a:hover
 }
 
 .well{
-  background-color: #e5e5e5 !important;
+  background-color: #FFFFFF !important;
 }
 
 .row{
