--- a/Android/Scrummerz/app/src/main/res/layout/activity_assignment_grades.xml
+++ b/Android/Scrummerz/app/src/main/res/layout/activity_assignment_grades.xml
@@ -4,33 +4,35 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="se.newton.scrummerz.grades_activity">
+    tools:context="se.newton.scrummerz.assignment_grades">
 
     <TextView
-        android:id="@+id/gradesView"
-        android:layout_width="wrap_content"
-        android:layout_height="39dp"
-        android:text="Grades"
-        android:textSize="30sp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="16dp"
+        android:id="@+id/courseName"
+        android:layout_width="335dp"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="course"
+        android:textSize="24sp"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginStart="16dp" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteY="7dp" />
 
     <ListView
         android:id="@android:id/list"
         android:layout_width="wrap_content"
-        android:layout_height="480dp"
+        android:layout_height="484dp"
         android:layout_marginBottom="0dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:layout_marginTop="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.979"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/gradesView"
+        app:layout_constraintTop_toBottomOf="@+id/courseName"
         app:layout_constraintVertical_bias="1.0" />
-
 </android.support.constraint.ConstraintLayout>
