--- a/Android/Scrummerz/app/src/main/res/layout/activity_assignment_grades.xml
+++ b/Android/Scrummerz/app/src/main/res/layout/activity_assignment_grades.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bglogin"
     tools:context="se.newton.scrummerz.assignment_grades">
 
     <TextView
