--- a/Android/Scrummerz/app/src/main/res/layout/activity_grades_activity.xml
+++ b/Android/Scrummerz/app/src/main/res/layout/activity_grades_activity.xml
@@ -4,19 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bglogin"
     tools:context="se.newton.scrummerz.grades_activity">
 
     <TextView
         android:id="@+id/gradesView"
         android:layout_width="wrap_content"
         android:layout_height="39dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:text="Grades"
         android:textSize="30sp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="16dp"
-        android:layout_marginLeft="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginStart="16dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
         android:id="@android:id/list"
