--- a/Android/Scrummerz/app/src/main/res/layout/activity_signed_in_start.xml
+++ b/Android/Scrummerz/app/src/main/res/layout/activity_signed_in_start.xml
@@ -79,7 +79,8 @@
         android:id="@+id/imageView"
         android:layout_width="0dp"
         android:layout_height="190dp"
-        android:scaleType="fitStart"
+        android:cropToPadding="false"
+        android:scaleType="centerCrop"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
