--- a/Webb/css/style.css
+++ b/Webb/css/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url('../images/webb-bg.svg');
+    background-image: url('../images/students.png');
     background-size: cover;
     background-attachment: fixed;
 }
