--- a/Android/Scrummerz/app/src/main/res/layout/activity_course_info.xml
+++ b/Android/Scrummerz/app/src/main/res/layout/activity_course_info.xml
@@ -43,7 +43,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="0dp"
         android:layout_marginTop="6dp"
-        android:text="Teacher: "
+        android:text="Lärare: "
         android:textColor="@android:color/background_light"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="@+id/detailsView"
