--- a/Android/Scrummerz/app/src/main/res/layout/activity_signed_in_start.xml
+++ b/Android/Scrummerz/app/src/main/res/layout/activity_signed_in_start.xml
@@ -125,4 +125,19 @@
         android:layout_marginTop="0dp"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
+    <Button
+        android:id="@+id/scanner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:text="Start camera"
+        app:layout_constraintLeft_toRightOf="@+id/myGradesTextView"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/myGradesTextView"
+        android:layout_marginTop="8dp"
+        app:layout_constraintHorizontal_bias="0.507"
+        app:layout_constraintBottom_toBottomOf="@+id/myGradesTextView"
+        android:layout_marginBottom="0dp" />
+
 </android.support.constraint.ConstraintLayout>
