--- a/Android/Scrummerz/app/src/main/res/layout/activity_assignment.xml
+++ b/Android/Scrummerz/app/src/main/res/layout/activity_assignment.xml
@@ -8,7 +8,7 @@
     tools:context="se.newton.scrummerz.assignment">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/courseNameView"
         android:layout_width="326dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
@@ -23,6 +23,17 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/assignmentsTxtView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="586dp"
+        android:layout_marginTop="-165dp"
+        android:text="Uppgifter:"
+        android:textSize="18sp"
+        app:layout_constraintLeft_toLeftOf="@+id/courseNameView"
+        app:layout_constraintTop_toBottomOf="@+id/courseNameView" />
+
     <ListView
         android:id="@+id/@android:id/list"
         android:layout_width="wrap_content"
@@ -30,12 +41,11 @@
         android:layout_marginBottom="0dp"
         android:layout_marginLeft="0dp"
         android:layout_marginRight="0dp"
-        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="1.0"
-        tools:layout_editor_absoluteY="124dp" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/assignmentsTxtView"
+        app:layout_constraintVertical_bias="1.0" />
 </android.support.constraint.ConstraintLayout>
