Scanner now reacts on faulty codes

--- a/Android/Scrummerz/app/src/main/res/layout/activity_scanner.xml
+++ b/Android/Scrummerz/app/src/main/res/layout/activity_scanner.xml
@@ -6,20 +6,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@mipmap/bglogin"
     android:orientation="vertical">
 
 
     <TextView
         android:id="@+id/ScanInfoText"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="205dp"
-        android:text="@string/dummy_content"
+        android:elevation="11dp"
+        android:text="@string/scannerInfo"
+        android:textAlignment="center"
         android:textColor="@android:color/black"
         android:textSize="18sp"
+        ads:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/content_frame" />
@@ -40,17 +44,33 @@
     </FrameLayout>
 
     <ProgressBar
-        android:id="@+id/scanProgress"
+        android:id="@+id/mProgressBar"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
+        android:elevation="11dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/content_frame"
         app:layout_constraintVertical_bias="0.61" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="0dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="0dp"
+        android:background="@android:color/white"
+        android:elevation="10dp"
+        ads:layout_constraintBottom_toBottomOf="parent"
+        ads:layout_constraintLeft_toLeftOf="parent"
+        ads:layout_constraintRight_toRightOf="parent"
+        ads:layout_constraintTop_toBottomOf="@+id/content_frame" />
 
 </android.support.constraint.ConstraintLayout>
