--- a/Android/Scrummerz/app/src/main/res/layout/activity_signed_in_start.xml
+++ b/Android/Scrummerz/app/src/main/res/layout/activity_signed_in_start.xml
@@ -8,15 +8,28 @@
     tools:context="se.newton.scrummerz.signedInStart">
 
     <TextView
+        android:id="@+id/scanner"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="16dp"
+        android:text="Registrera närvaro"
+        android:textColor="@color/common_google_signin_btn_text_dark_default"
+        android:textSize="24sp"
+        app:layout_constraintLeft_toLeftOf="@+id/myCoursesTextView"
+        app:layout_constraintTop_toBottomOf="@+id/myGradesTextView" />
+
+    <TextView
         android:id="@+id/myGradesTextView"
         android:layout_width="154dp"
         android:layout_height="30dp"
-        android:layout_marginTop="17dp"
+        android:layout_marginTop="16dp"
         android:text="Mina betyg"
         android:textColor="@color/common_google_signin_btn_text_dark_default"
         android:textSize="24sp"
         app:layout_constraintLeft_toLeftOf="@+id/myCoursesTextView"
-        app:layout_constraintTop_toBottomOf="@+id/myCoursesTextView" />
+        app:layout_constraintTop_toBottomOf="@+id/myCoursesTextView"
+        android:layout_marginLeft="0dp" />
 
     <TextView
         android:id="@+id/feedbackTextView"
@@ -35,13 +48,14 @@
         android:id="@+id/myCoursesTextView"
         android:layout_width="154dp"
         android:layout_height="31dp"
-        android:layout_marginTop="9dp"
+        android:layout_marginTop="16dp"
         android:clickable="true"
         android:text="Mina kurser"
         android:textColor="@color/common_google_signin_btn_text_dark_default"
         android:textSize="24sp"
         app:layout_constraintLeft_toLeftOf="@+id/feedbackTextView"
-        app:layout_constraintTop_toBottomOf="@+id/feedbackTextView" />
+        app:layout_constraintTop_toBottomOf="@+id/feedbackTextView"
+        android:layout_marginLeft="-4dp" />
 
     <TextView
         android:id="@+id/welcome"
@@ -49,17 +63,17 @@
         android:layout_height="0dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
         android:text="Välkommen"
         android:textAlignment="center"
         android:textColor="@color/common_google_signin_btn_text_dark_default"
         android:textSize="24sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
         app:layout_constraintHorizontal_bias="0.571"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        android:layout_marginEnd="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="32dp" />
 
     <TextView
         android:id="@+id/textView5"
@@ -74,17 +88,6 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="80dp" />
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="0dp"
-        android:layout_height="190dp"
-        android:cropToPadding="false"
-        android:scaleType="centerCrop"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/students" />
 
     <ImageButton
         android:id="@+id/negative"
@@ -124,20 +127,5 @@
         app:layout_constraintRight_toRightOf="@+id/textView5"
         android:layout_marginTop="0dp"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
-
-    <Button
-        android:id="@+id/scanner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:text="Start camera"
-        app:layout_constraintLeft_toRightOf="@+id/myGradesTextView"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/myGradesTextView"
-        android:layout_marginTop="8dp"
-        app:layout_constraintHorizontal_bias="0.507"
-        app:layout_constraintBottom_toBottomOf="@+id/myGradesTextView"
-        android:layout_marginBottom="0dp" />
 
 </android.support.constraint.ConstraintLayout>
