Added notifications, string extract, and info image to scanner

--- a/Android/Scrummerz/app/src/main/res/layout/activity_signed_in_start.xml
+++ b/Android/Scrummerz/app/src/main/res/layout/activity_signed_in_start.xml
@@ -13,7 +13,7 @@
         android:layout_height="30dp"
         android:layout_marginLeft="0dp"
         android:layout_marginTop="16dp"
-        android:text="Registrera närvaro"
+        android:text="@string/menuRegisterAttendance"
         android:textColor="@color/cardview_dark_background"
         android:textSize="24sp"
         app:layout_constraintLeft_toLeftOf="@+id/myCoursesTextView"
@@ -25,7 +25,7 @@
         android:layout_height="30dp"
         android:layout_marginLeft="0dp"
         android:layout_marginTop="16dp"
-        android:text="Mina betyg"
+        android:text="@string/menuMyGrades"
         android:textColor="@color/cardview_dark_background"
         android:textSize="24sp"
         app:layout_constraintLeft_toLeftOf="@+id/myCoursesTextView"
@@ -38,7 +38,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
-        android:text="Ge feedback"
+        android:text="@string/giveFeedback"
         android:textColor="@color/cardview_dark_background"
         android:textSize="24sp"
         app:layout_constraintLeft_toLeftOf="@+id/welcome"
@@ -51,7 +51,7 @@
         android:layout_marginLeft="-4dp"
         android:layout_marginTop="16dp"
         android:clickable="true"
-        android:text="Mina kurser"
+        android:text="@string/menuMyCourses"
         android:textColor="@color/cardview_dark_background"
         android:textSize="24sp"
         app:layout_constraintLeft_toLeftOf="@+id/feedbackTextView"
@@ -66,7 +66,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Välkommen"
+        android:text="@string/welcome"
         android:textAlignment="center"
         android:textColor="@color/cardview_dark_background"
         android:textSize="24sp"
@@ -82,7 +82,7 @@
         android:layout_marginBottom="80dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:text="Hur känner du dig idag?"
+        android:text="@string/feelingToday"
         android:textColor="@color/cardview_dark_background"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
