--- a/Android/Scrummerz/app/src/main/res/layout/activity_courses.xml
+++ b/Android/Scrummerz/app/src/main/res/layout/activity_courses.xml
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
-        android:text="Mina kurser"
+        android:text="@string/myCourses"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textColor="@color/cardview_dark_background"
         app:layout_constraintLeft_toLeftOf="parent"
