--- a/Android/Scrummerz/app/src/main/res/layout/activity_grades_activity.xml
+++ b/Android/Scrummerz/app/src/main/res/layout/activity_grades_activity.xml
@@ -14,7 +14,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="Grades"
+        android:text="@string/gradesTitle"
         android:textSize="30sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
