--- a/Android/Scrummerz/app/src/main/res/layout/activity_login.xml
+++ b/Android/Scrummerz/app/src/main/res/layout/activity_login.xml
@@ -14,7 +14,7 @@
         android:layout_marginLeft="0dp"
         android:layout_marginRight="0dp"
         android:layout_marginTop="62dp"
-        android:text="Welcome"
+        android:text="@string/welcome"
         android:textColor="@color/common_google_signin_btn_text_dark_default"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -30,7 +30,7 @@
         android:layout_marginRight="0dp"
         android:layout_marginTop="41dp"
         android:ems="10"
-        android:hint="Email"
+        android:hint="@string/email"
         android:inputType="textEmailAddress"
         android:textColor="@color/common_google_signin_btn_text_dark_default"
         app:layout_constraintHorizontal_bias="0.494"
@@ -48,7 +48,7 @@
         android:layout_marginRight="0dp"
         android:layout_marginTop="14dp"
         android:ems="10"
-        android:hint="Password"
+        android:hint="@string/password"
         android:inputType="textPassword"
         android:textColor="@color/common_google_signin_btn_text_dark_default"
         app:layout_constraintHorizontal_bias="0.0"
@@ -72,28 +72,17 @@
         app:layout_constraintTop_toBottomOf="@+id/passwordField" />
 
     <TextView
-        android:id="@+id/forgotLink"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="7dp"
-        android:layout_marginTop="8dp"
-        android:linksClickable="true"
-        android:text="Forgot password?"
-        android:textColor="@color/common_google_signin_btn_text_dark_default"
-        app:layout_constraintLeft_toLeftOf="@+id/loginBtn"
-        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />
-
-    <TextView
         android:id="@+id/mStatusTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="7dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/forgotLink" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/loginBtn"
+        app:layout_constraintHorizontal_bias="0.501" />
 
 </android.support.constraint.ConstraintLayout>
