--- a/Android/Scrummerz/app/src/main/res/layout/activity_main.xml
+++ b/Android/Scrummerz/app/src/main/res/layout/activity_main.xml
@@ -9,20 +9,21 @@
 
     <Button
         android:id="@+id/goToLogin"
-        android:layout_width="156dp"
-        android:layout_height="63dp"
+        android:layout_width="190dp"
+        android:layout_height="57dp"
+        android:layout_marginBottom="0dp"
+        android:layout_marginTop="8dp"
         android:background="@color/common_google_signin_btn_text_dark_default"
-        android:text="Go to login"
+        android:text="@string/goToLogin"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView3"
         tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintTop_creator="1"
-        android:layout_marginBottom="0dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+        app:layout_constraintVertical_bias="0.501" />
 
     <ImageView
         android:id="@+id/imageView3"
