--- a/Android/Scrummerz/app/src/main/res/layout/activity_scanner.xml
+++ b/Android/Scrummerz/app/src/main/res/layout/activity_scanner.xml
@@ -17,7 +17,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="205dp"
+        android:layout_marginTop="24dp"
         android:elevation="11dp"
         android:text="@string/scannerInfo"
         android:textAlignment="center"
@@ -26,7 +26,7 @@
         ads:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/content_frame" />
+        app:layout_constraintTop_toBottomOf="@+id/infoImage" />
 
     <FrameLayout
         android:id="@+id/content_frame"
@@ -59,7 +59,7 @@
         app:layout_constraintVertical_bias="0.61" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/background"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="0dp"
@@ -72,5 +72,18 @@
         ads:layout_constraintLeft_toLeftOf="parent"
         ads:layout_constraintRight_toRightOf="parent"
         ads:layout_constraintTop_toBottomOf="@+id/content_frame" />
+
+    <ImageView
+        android:id="@+id/infoImage"
+        android:layout_width="0dp"
+        android:layout_height="167dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="16dp"
+        ads:layout_constraintHorizontal_bias="0.503"
+        ads:layout_constraintLeft_toLeftOf="parent"
+        ads:layout_constraintRight_toRightOf="parent"
+        ads:layout_constraintTop_toTopOf="@+id/background"
+        ads:srcCompat="@drawable/scanner" />
 
 </android.support.constraint.ConstraintLayout>
